<resources>
    <string name="app_name">notix</string>

    <string name="text_addres">Dirección</string>
    <string name="text_body">Cuerpo: </string>
    <string name="text_bornDate">Nacimiento: YYYY-MM-DD</string>
    <string name="text_code">Código</string>
    <string name="text_date">Fecha</string>
    <string name="text_date_format">YYYY-MM-DD</string>
    <string name="text_dni">DNI</string>
    <string name="text_eva1">Eva1</string>
    <string name="text_eva2">Eva2</string>
    <string name="text_eva3">Eva3</string>
    <string name="text_final1">Final 1</string>
    <string name="text_final2">Final 2</string>
    <string name="text_justified">Justificada</string>
    <string name="text_justify">Justificar</string>
    <string name="text_mail">Correo</string>
    <string name="text_mail_subject">Asunto: </string>
    <string name="text_name">Nombre</string>
    <string name="text_nationality">Nacionalidad</string>
    <string name="text_new_address">Nueva dirección</string>
    <string name="text_new_mail">Nuevo correo</string>
    <string name="text_new_password">Nueva contraseña</string>
    <string name="text_new_phone">Nuevo número</string>
    <string name="text_password">Contraseña</string>
    <string name="text_phone">Teléfono</string>
    <string name="text_professor">Profesor</string>
    <string name="text_receiper">Receptor: </string>
    <string name="text_repeat_password">Repita la contraseña</string>
    <string name="text_student">Alumno</string>
    <string name="text_subject">Asignatura</string>
    <string name="text_surname">Apellidos</string>

    <string name="error">¡Error!</string>
    <string name="error_absence_exits">¡Falta ya existente!</string>
    <string name="error_absence_is_justified">¡La falta ya esta justificada!</string>
    <string name="error_any_field_modify">¡No has modificado ningún dato!</string>
    <string name="error_blankField">¡Se deben rellenar todos los campos!</string>
    <string name="error_camera">¡Camara no disponible!</string>
    <string name="error_communication">¡Error al conectar con el servidor!</string>
    <string name="error_conflict">¡Conflicto!</string>
    <string name="error_dniPass">¡DNI o Contraseña incorrecta!</string>
    <string name="error_duplicated_user">¡El usuario ya existe!</string>
    <string name="error_invalid_data">¡Has introducido algún dato invalido!</string>
    <string name="error_modify_password">¡No se ha podido actualizar la contraseña!</string>
    <string name="error_no_data_modified">¡No se han podido actualizar los datos!</string>
    <string name="error_not_authorized">¡No estas autorizado a hacer esta accion!</string>
    <string name="error_notes">¡Aun no tienes notas!</string>
    <string name="error_no_create_user">¡No se ha podido crear el usuario!</string>
    <string name="error_partial">¡Aun no tienes notas parciales!</string>
    <string name="error_password">¡Contraseña incorrecta!</string>
    <string name="error_password_length">¡Contraseña minimo de 5 caracteres!</string>
    <string name="error_phone_length">¡El número debe tener 9 caracteres!</string>
    <string name="error_photo">¡Debes sacarte una foto!</string>
    <string name="error_samePass">¡Las contraseñas no coinciden!</string>
    <string name="error_server_data">¡Error al recibir datos del servidor!</string>
    <string name="error_server_null_receipt">¡No hay datos en el servidor!</string>

    <string name="button_add">AÑADIR</string>
    <string name="button_all_absences">VER TODAS LAS FALTAS</string>
    <string name="button_all_justified_absences">VER JUSTIFICADAS</string>
    <string name="button_all_notes">VER NOTAS</string>
    <string name="button_enter">ENTRAR</string>
    <string name="button_forget_password">He olvidado mi contraseña</string>
    <string name="button_go_signup">No tengo usuario/Registrar</string>
    <string name="button_modify">Modificar</string>
    <string name="button_no_add_user">Ya tengo usuario/Iniciar Sesión</string>
    <string name="button_send">ENVIAR</string>
    <string name="button_send_code">Enviar Código</string>
    <string name="button_signup">REGISTRAR</string>

    <string name="view_absences">FALTAS</string>
    <string name="view_justified_absences">FALTAS JUSTICADAS</string>
    <string name="view_mail">CORREO</string>
    <string name="view_modify_data">MODIFICAR DATOS</string>
    <string name="view_notes">NOTAS</string>
    <string name="view_partial">PARCIALES</string>
    <string name="view_professor_area">ÁREA PROFESOR</string>
    <string name="view_professor_signup">Registro Profesor</string>
    <string name="view_students">ALUMNOS</string>
    <string name="view_student_area">ÁREA ALUMNO</string>
    <string name="view_student_signup">Registro Alumno</string>
    <string name="view_subjects">ASIGNATURAS</string>

    <string name="toast_absence_created">¡Falta creada correctamente!</string>
    <string name="toast_absence_deleted">¡Falta eliminada correctamente!</string>
    <string name="toast_absence_updated">¡Falta justificada correctamente!</string>
    <string name="toast_created">¡Usuario creado!</string>
    <string name="toast_dni_not_registered">¡Este dni no esta registrado!</string>
    <string name="toast_incorrect_code">¡Codigo de verificacion incorrecto!</string>
    <string name="toast_modified_password">¡Contraseña actualizada!</string>
    <string name="toast_note_updated">¡Nota actualizada correctamente!</string>
    <string name="toast_pass_modified">¡Contraseña modificada!</string>
    <string name="toast_professor_datas_modified">¡Datos del profesor actualizados!</string>
    <string name="toast_sended">¡Enviado!</string>
    <string name="toast_student_datas_modified">¡Datos del alumno actualizados!</string>
    <string name="toast_user_not_exists">¡No existe el usuario!</string>
    <string name="toast_verification">¡Usuario pendiente de verificación!</string>

    <string name="option_absence_false">No justificada</string>
    <string name="option_absence_true">Justificada</string>
    <string name="option_nationality_andorra">Andorra</string>
    <string name="option_nationality_france">Francia</string>
    <string name="option_nationality_italy">Italia</string>
    <string name="option_nationality_morocco">Marruecos</string>
    <string name="option_nationality_murcia">Murcia</string>
    <string name="option_nationality_portugal">Portugal</string>
    <string name="option_nationality_spain">España</string>

    <string name="menu_basque">Euskera</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_edit_profile">Editar datos</string>
    <string name="menu_english">Inglés</string>
    <string name="menu_justify">Justificar</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_main">MENÚ</string>
    <string name="menu_spanish">Castellano</string>

    <string name="msg_message_verification_code">Ha solicitado restablecer la contraseña de acceso a su cuenta de Notix</string>
    <string name="msg_message_verification_code2">Su codigo de verificacion para poder restablecer la contraseña es:</string>

    <string name="subject">Código de verificación</string>

    <string name="check_remember">Recuerdame</string>
    <string name="error_date_format">Formato de fecha incorrecto</string>
    <string name="text_evaluation">Evaluacion</string>
    <string name="text_duration">Duración</string>
    <string name="text_day">Día</string>

    <string name="question_singup">¿Que tipo de usuario eres?</string>
</resources>