<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/professor_nav_main"
        android:icon="@drawable/icon_main"
        android:title="@string/menu_main" />

    <item
        android:id="@+id/professor_nav_notes"
        android:icon="@drawable/icon_notes"
        android:title="@string/view_notes" />

    <item
        android:id="@+id/professor_nav_absences"
        android:icon="@drawable/icon_absences"
        android:title="@string/view_absences" />

    <item
        android:id="@+id/professor_nav_students"
        android:icon="@drawable/icon_students"
        android:title="@string/view_students" />

    <item
        android:id="@+id/professor_nav_mail"
        android:icon="@drawable/icon_email"
        android:title="@string/view_mail" />
</menu>