<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentAbsencesActivity">

    <TextView
        android:id="@+id/viewStudentAbsences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_absences"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listViewStudentAbsences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/listViewStudentAbsences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewStudentAbsencesSubject"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_subject"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viewStudentAbsencesDuration"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_day"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/listViewStudentAbsences"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStudentAbsencesJustified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_all_justified_absences"
        app:layout_constraintBottom_toTopOf="@+id/absencesBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewStudentAbsences" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/absencesBottomNavigation"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/student_no_main_bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>