<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfessorMailActivity">

    <TextView
        android:id="@+id/viewProfessorMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_mail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="201dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewProfessorMailReceiper"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/text_receiper" />

            <Spinner
                android:id="@+id/spinnerProfessorMailReceiper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewProfessorMailSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mail_subject" />

            <EditText
                android:id="@+id/textProfesessorMailSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout6"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewProfessorMailBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_body" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textProfessorMailBody"
                android:layout_width="350dp"
                android:layout_height="177dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonProfessorMailSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        app:layout_constraintBottom_toTopOf="@+id/mailBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout6" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mailBottomNavigation"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/professor_no_main_bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>