<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentMailActivity">

    <TextView
        android:id="@+id/viewStudentMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_mail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutStudentMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/layoutStudentMail"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="191dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutStudentMail2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewStudentMailReceiper"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_receiper" />

            <Spinner
                android:id="@+id/spinnerStudentMailReceiper"
                android:layout_width="141dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewStudentMailSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mail_subject" />

            <EditText
                android:id="@+id/textStudentMailSubject"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/layoutStudentMail2"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewStudentMailBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_body" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textStudentMailBody"
                android:layout_width="350dp"
                android:layout_height="177dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonStudentMailSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        app:layout_constraintBottom_toTopOf="@+id/mailBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutStudentMail2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mailBottomNavigation"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/student_no_main_bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>