<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentSubjectsActivity">

    <TextView
        android:id="@+id/viewStudentSubjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listViewStudentSubjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/view_subjects" />

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/listViewStudentSubjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_subject"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_duration"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/listViewStudentSubjects"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/subjectsBottomNavigation"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/student_no_main_bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>